--- a/index.adoc
+++ b/index.adoc
@@ -799,7 +799,7 @@ spec:
     spec:
       containers:
       - name: jsonreader <9>
-        image: ualmtorres/jsonreader:latest <10>
+        image: ualmtorres/jsonreader:v0 <10>
         ports:
         - name: http
           containerPort: 80 <11>
@@ -1082,26 +1082,29 @@ CURRENT   NAME            CLUSTER         AUTHINFO     NAMESPACE
 
 ## Apéndice. Service Mesh con Istio
 
-Los microservicios se han convertido en algo habitual en las aplicaciones cloud actuales. Las arquitecturas de microservicios permiten realizar cambios en un servicio sin tener que volver a desplegar toda la aplicación. A diferencia de otras arquitecturas, los microservicios pueden ser creados por grupos de desarrollo pequeños creando sus propias herramientas y lenguajes de programación. Básicamente, los microservicios se construyen de forma independiente, se comunican entre sí y pueden fallar de forma individual sin provocar una caída del funcionamiento de la aplicación completa.
+Los microservicios se han convertido en algo habitual en las aplicaciones cloud actuales. Las arquitecturas de microservicios permiten realizar cambios en un servicio sin tener que volver a desplegar toda la aplicación. Esto permite que los microservicios pueden ser creados por grupos de desarrollo pequeños, creando sus propias herramientas y usando los lenguajes de programación más adecuados, lo que aumenta la productividad y velocidad del proyecto. Básicamente, los microservicios se construyen de forma independiente, se comunican entre sí y permiten el fallo de forma individual sin provocar una caída del funcionamiento de la aplicación completa.
 
-Sin embargo, el desarrollo y la utilización de microservicios supone nuevos desafíos e implica el desarrollo y gestión de comunicación entre servicios. Esta lógica podría ser codificada en cada servicio sin necesidad de un _service mesh_, pero a medida que la complejidad crece, se hace más necesario un _service mesh_.
+Sin embargo, el desarrollo y la utilización de microservicios supone nuevos desafíos e implica la implementación y la gestión de la comunicación entre ellos. Esta lógica podría ser codificada en cada servicio, lo que aumenta su complejidad y dificultad, y a medida que el proyecto crece, se hace más necesario un _service mesh_.
 
-Un _service mesh_ es una capa complementaria responsable de la gestión del tráfico, políticas, certificados y seguridad de los servicios. Así, un _service mesh_ no añade nueva funcionalidad a las aplicaciones. Simplemente, se dedica a sacar fuera de los servicios la lógica de comunicación y la abstrae a una capa de infraestructura. Con un _service mesh_ los desarrolladores pueden centrarse en el desarrollo de la lógica de negocio y abstraerse de lo demás.
+Un _service mesh_ es una capa complementaria a la aplicación y es responsable de la gestión del tráfico, políticas, certificados y seguridad de los servicios. Así, un _service mesh_ no añade nueva funcionalidad a las aplicaciones. Simplemente, se dedica a sacar fuera de los servicios la lógica de comunicación, abstrayéndola a una capa de infraestructura. Así, con un _service mesh_ los desarrolladores pueden centrarse en el desarrollo de la lógica de negocio y abstraerse de lo demás.
 
-Para ofrecer esta funcionalidad, un _service mesh_ introduce una colección de proxies de red. En un _service mesh_ las peticiones entre los servicios se enrutan a través de los proxies en su propio nivel de infraestructura. Estos proxies son implementados como sidecars que se situan en el mismo pod que el servicio al que _sirven_ (tráfico, seguridad, ...). Si vemos esta red de sidecars desacoplados de los servicios y los situamos en una capa aparte visualizaremos el _service mesh_.
+Para ofrecer esta funcionalidad, un _service mesh_ introduce una colección de proxies de red. En un _service mesh_ las peticiones entre los servicios se enrutan a través de estos proxies. Dichos proxies son implementados como sidecars, y se situan en el mismo pod que el servicio al que _sirven_ (tráfico, seguridad, ...). Si imaginamos esta red de sidecars en una capa aparte visualizaremos el _service mesh_.
 
 image::ServiceMesh.png[]
 
-La idea entonces es inyectar un contenedor sidecar especial en cada microservicio y enrutar todo el tráfico a través de los sidecars en lugar de a través de los microservicios. El controlador del _service mesh_ podrá filtrar tráfico, y aplicar políticas de balanceo, seguridad y limitación de tráfico.
+La idea entonces es inyectar un contenedor sidecar especial en el pod de cada microservicio y enrutar todo el tráfico a través de estos sidecars en lugar de a través de los propios microservicios. El controlador del _service mesh_ interactuará con estos proxies y podrá filtrar tráfico, así como aplicar políticas de balanceo, seguridad y limitación de tráfico.
 
-Sin un _service mesh_, cada microservicio debería incluir la lógica de gobierno y comunicación con otros servicios, lo que añade una complejidad extra al desarrollo del servicio. Además, el disponer de un _service mesh_ en entornos normalizados, permite tratar el problema del tráfico, políticas, seguridad y certificados entre servicios de forma estándar, independientemente de la plataforma en la que estén desplegadas nuestras aplicaciones.
+Sin un _service mesh_, cada microservicio debería incluir la lógica de gobierno y de comunicación con otros servicios, lo que añade una complejidad extra al desarrollo del servicio. Además, el disponer de un _service mesh_ en entornos normalizados permite tratar de forma estándar el problema del tráfico, así como la gestión de políticas, seguridad y certificados entre servicios, independientemente de la plataforma en la que estén desplegadas nuestras aplicaciones.
 
-https://istio.io/[Istio] es un _service mesh_ que permite conectar, asegurar, controlar y observar servicios. 
+En el contexto de _service mesh_ se suelen tratar con varias aplicaciones. Las más habituales son las siguientes:
 
-https://www.kiali.io/[Kiali] extiende estas características de gestión del tráfico incorporando observabilidad y visualización de servicios de la red para mejorar el trabajo con la red. Kiali ofrece una forma sencilla de ver la toplogía de un _service mesh_ y observar cómo interactúan los servicios.
+* https://istio.io/[Istio]: _Service mesh_ que permite conectar, asegurar, controlar y observar servicios. 
 
+* https://www.kiali.io/[Kiali]: Extiende estas características de gestión del tráfico incorporando observabilidad y visualización de servicios de la red. Kiali ofrece una forma sencilla de ver la topología de un _service mesh_ y observar cómo interactúan los servicios.
 
-https://www.jaegertracing.io[Jaeger] se encarga del tracing y permite a los desarrolladores fragmentar una petición y ver cómo va avanzando entre los distintos servicios de princicio a fin.
+* https://www.jaegertracing.io[Jaeger]: Se encarga del tracing y permite fragmentar una petición y ver cómo qué tiempo se emplea en cada uno los componentes o partes de las que consta la petición inicial.
+
+* https://prometheus.io/[Prometheus]: Sistema de monitorización y alertas que almacena en forma de series temporales la actividad del _mesh_ (peticiones, volumen de descarga, tiempos de resolución, errores, ...)
 
 image::ServiceMeshKialiJaeger.png[]
 
@@ -1115,27 +1118,27 @@ Istio está disponible en Rancher desde la versión 2.3.0-alpha5. Basta activarl
 
 ====
 
-La figura siguiente ilustra una aplicación sin Istio. En ella cada microservicio es el responsable de implementar la funcionalidad de discovery, balanceo, resilencia, métricas y trazado.
+La figura siguiente ilustra una aplicación sin Istio. En ella cada microservicio es el responsable de implementar la funcionalidad de _discovery_, balanceo, resilencia, métricas y trazado.
 
 image::beforeIstio.jpg[]
 
-La figura siguiente ilustra como en as aplicaciones basadas en Istio los pods están formados por dos contenedores: el contenedor del microservicio y el sidecar. En el sidecar se delegan las tareas de discovery, balanceo, resilencia, métricas y trazado, lo que facilita el desarrollo de los microservicios.
+La figura siguiente ilustra como en las aplicaciones basadas en Istio los pods están formados por dos contenedores: el contenedor del microservicio y el sidecar. Al sidecar se le delegan las tareas de _discovery_, balanceo, resilencia, métricas y trazado, lo que facilita el desarrollo de los microservicios.
 
 image::afterIstio.jpg[]
 
-Istio ofrece una forma declarativa, mediante la creación de manifiestos YAML, de gestión del tráfico, enrutado selectivo de peticiones (en lugar del round robin que ofrece Kubernetes), despliegues (_canary, A/B, blue/green_), resilencia a nivel de red (con opciones de _retry_, _timeout_), control de acceso, observación de microservicios distribuidos comprendiendo los flujos y trazas y pudiendo ver las métricas importantes de forma inmediata, inyección de caos para poner a prueba la resilencia de aplicaciones y servicios, por citar algunas de sus funcionalidades destacadas.
+Istio ofrece una forma declarativa, mediante la creación de manifiestos YAML, de gestión del tráfico, enrutado selectivo de peticiones (en lugar del round robin que ofrece Kubernetes), diferentes tipos de despliegue (_canary, A/B, blue/green_), resilencia a nivel de red (con opciones de _retry_, _timeout_), control de acceso, observación de microservicios distribuidos comprendiendo los flujos y trazas y pudiendo ver las métricas importantes de forma inmediata, inyección de caos para poner a prueba la resilencia de aplicaciones y servicios, por citar algunas de sus funcionalidades destacadas.
 
 Para activar el uso de Istio en un namespace se haría con 
 
 [source, bash]
 ----
-`kubectl label namespace default istio-injection=enabled`
+kubectl label namespace default istio-injection=enabled
 ----
 
 
 ### Arquitectura de Istio
 
-Instio consta de un plano de control y un plano de datos. El plano de datos está formado por proxies que están en la arqutiectura de la aplicación. Usando el patrón del sidecar, cada instancia de la aplicación tendrá su proxy dedicado a través del cual pasa todo el tráfico antes de llegar a la aplicación. Estos proxies individuales pueden ser configurados individualmente para enrutar, filtrar y aumentar el tráfico según sea necesario.
+Istio consta de un plano de control y un plano de datos. El plano de datos está formado por proxies que se integran en los pods de la aplicación. Usando el patrón del sidecar, cada instancia de la aplicación tendrá su proxy dedicado a través del cual pasa todo el tráfico antes de llegar a la aplicación. Estos proxies individuales son gestionados individualmente por Istio para enrutar, filtrar y aumentar el tráfico según sea necesario.
 
 image::istioArchitecture.jpg[]
 
@@ -1145,22 +1148,22 @@ image::istioCanary.jpg[]
 
 [NOTE]
 ====
-Algo a tener en cuenta es que los componentes del plano de control son aplicaciones sin estado lo que permitan que puedan escalar horizontalmente. Todos los datos están almacenados en _etcd_ como descricpciones personalizadas de recursos Kubernetes.
+Algo a tener en cuenta es que los componentes del plano de control son aplicaciones sin estado, lo que favorece que puedan escalar horizontalmente. Todos los datos están almacenados en _etcd_ como descricpciones personalizadas de recursos Kubernetes.
 ====
 
-Sin embrgo, toda esta funcionalidad tiene un coste sobre la infraestructura. Cuando mayor sea el cluster mayor será la carga añadida al sistema. Cada sidecar consume mucha RAM (unos 350Mb). Además, añade una latencia de unos 10 ms a cada petición.
+Sin embargo, toda esta funcionalidad tiene un coste sobre la infraestructura. Cuando mayor sea el cluster, mayor será la carga añadida al sistema. Cada sidecar consume mucha RAM (unos 350Mb). Además, añade una latencia de unos 10 ms a cada petición.
 
 
 ### Control de tráfico y técnicas de despliegue 
 
-* Despliegue _canary_: Se despliega en producción una nueva versión del código pero sólo se dirige a él una parte del tráfico. Quizá sólo tengan acceso a él clientes de prueba, empleados, usuarios de iOS, etcétera. Una vez desplegado el canario, se monitoriza para comprobar la existencia de excepciones, comportamiento no satisfactorio, bajada del rendimiento, y demás. En cambio, si el canario no muestra indicios de que presente problemas se pueden ir aumentando paulatinamente el tráfico hacia él. Si presenta un comportamiento inaceptable, se puede retirar fácilmente de producción.
+* Despliegue _canary_: Se despliega en producción una nueva versión del código, pero sólo se dirige a ella una parte del tráfico. A la nueva versión quizá sólo tengan acceso clientes de prueba, empleados, usuarios de iOS, etcétera. Una vez desplegado el canario, éste se monitoriza para comprobar la posible existencia de excepciones, comportamiento no satisfactorio, bajada del rendimiento, y demás. Si el canario no muestra indicios de que presente problemas, se puede ir aumentando paulatinamente el tráfico hacia él. En cambio, si presenta un comportamiento inaceptable, se puede retirar fácilmente de producción.
 
 * Control del tráfico: Se pueden especificar reglas de enrutado que controlen el tráfico a un conjunto de pods. En concreto, Istio usa los recursos `DestinationRule` y `VirtualService` en forma de manifiestos YAML para describir estas reglas.
-    - `DestinationRule`: Define grupos (_subsets_) de pods.
+    - `DestinationRule`: Define grupos (_subsets_) de pods. Normalmente definiremos un _subset_ para cada servicio y el _subset_ estará formado por cada una de las versiones que se pueden utilizar del servicio.
     - `VirtualService` dirige el tráfico a un _subset_ basado en porcentajes, cabeceras, direcciones IP, por citar algunas. La selección de pods afectados es similar al modelo de selectores utilizado por Kubernetes para selección basada en etiquetas (_labels_).
     
 +
-Este comportamiento del enrutado no es sólo para el tráfico de entrada externo. Es para toda la comunicación inter-servicio en el _service mesh_. Así, si hubiese servicios desplegados en Kubernetes, pero que no sean parte del _mesh_ no estaría afectado por estas reglas y se regiría por las reglas de balanceo de Kubernetes (round-robin).
+Este comportamiento del enrutado no es sólo para el tráfico de entrada externo. Es para toda la comunicación inter-servicio en el _service mesh_. Así, si hubiese servicios desplegados en Kubernetes, pero que no sean parte del _mesh_, no estaría afectado por estas reglas y se regiría por las reglas de balanceo de Kubernetes (round-robin).
 
 * _Dark launch_: Despliegue a producción que no es visible a los clientes. En este caso Istio permite duplicar (_mirror_) el tráfico a una versión de la aplicación y ver cómo se comporta respecto a la versión del pod en producción. De esta forma se están realizando peticiones en las condiciones de producción al nuevo servicio sin afectar al tráfico de la versión en producción. No obstante, hay que tener una consideración especial con los servicios que traten con datos o estén vinculados a otros servicios, para no introducir duplicados, provocar inconsistencias y otros problemas derivados de la duplicación de peticiones.
 
@@ -1168,23 +1171,32 @@ Este comportamiento del enrutado no es sólo para el tráfico de entrada externo
 
 * _Circuit breaker_: Determina el número máximo de peticiones que puede soportar un pod. Pasado ese valor no admite más hasta que se recupere.
 * _Pool ejection_: Saca de un nodo a un pod que esté dando fallos creando un nuevo pod que los sustituya en otro nodo.
-* _Retries_: Reenvía la petición a otro pod al encontrar un caso de circuit breaker o pool rejection 
+* _Retries_: Reenvía la petición a otro pod al encontrar un caso de _circuit breaker_ o _pool rejection_.
 
 ### Caso práctico
 
 Para no perdernos en los detalles usaremos un ejemplo muy sencillo con dos servicios: uno que produce datos y otro que los presenta. Podríamos ver este ejemplo como un ejemplo muy reducido de backend y frontend.
 
-El servicio que genera datos se denomina `jsonproducer` y genera un documento JSON con un único elemento `nombre` y un valor aasociado (p.e. `{"nombre": "manolo"}`). De este servicio se cuenta con dos versiones, cada una con su imagen Docker correspondiente. La primera versión devuelve el elemento JSON `{"nombre": "manolo"}`. La segunda versión devuelve el elemento JSON `{"nombre": "Manuel Torres"}`
+El servicio que genera datos se denomina `jsonproducer` y genera un documento JSON con un único elemento `nombre` y un valor aasociado (p.e. `{"nombre": "manolo"}`). De este servicio se cuenta con dos versiones, cada una con su imagen Docker correspondiente. La primera versión (`v0`) devuelve el elemento JSON `{"nombre": "manolo"}`. La segunda versión (`v1`) devuelve el elemento JSON `{"nombre": "Manuel Torres"}`
 
-El servicio que consume datos se denomina `jsonconsumer` y usará los datos leídos de `jsonproducer` para presentarlos al usuario en forma de saludo, mostrando `Hola` seguido del nombre leído del JSON devuelto por la versión de `jsonproducer` usada.
+El servicio que consume datos se denomina `jsonreader` y usará los datos leídos de `jsonproducer` para presentarlos al usuario en forma de saludo, mostrando `Hola` seguido del nombre leído del JSON devuelto por la versión de `jsonproducer` usada (`Hola manolo` cuando use `v0` y `Hola Manuel Torres` cuando use `v1`).
 
 #### Creación de todos los servicios 
 
-Vamos a desplegar en el cluster de Kubernetes todos los recursos (`Service` y `Deployment`) con todas sus versiones correspondientes. Posteriormente, con Istio controlaremos el tráfico que se dirige a cada versión desplegada. En nuestro ejemplo se definirán dos objetos `Deployment`, uno para cada una de las versiones del `jsonproducer` que quedarán desplegadas en el cluster.
+En primer lugar vamos a desplegar en el cluster de Kubernetes todos los recursos (`Service` y `Deployment`) con todas sus versiones correspondientes. Posteriormente, con Istio controlaremos el tráfico que se dirige a cada versión desplegada. En nuestro ejemplo se definirán dos objetos `Deployment`, uno para cada una de las versiones del `jsonproducer` (`v0` y `v1`) que quedarán desplegadas en el cluster.
 
 Cada despliegue incorpora en los metadatos el nombre que le que queremos dar, así como unas etiquetas con su versión, que le permitirán ser seleccionado posteriormente cuando se definan los _servicios virtuales_. Además, en la `spec` del despliegue se usarán etiquetas en `matchLabels` que permitirán más adelante a Istio distinguir los pods correspondientes a cada despliegue.
 
 En este ejemplo usaremos dos versiones (dos recursos `Deployment`) del `jsonproducer`. La primera está basada en la imagen `ualmtorres/jsonproducer:v0` que devuelve `{"nombre": "manolo"}`. La segunda está basada en la imagen `ualmtorres/jsonproducer:v1` que devuelve `{"nombre": "Manuel Torres"}`. Con este ejemplo tan sencillo nos bastará para ver a Istio en acción controlando el tráfico. 
+
+El manifiesto siguiente corresponde a los dos servicios (`jsonproducer`  y `jsonreader`), a los `Deployment` correspondientes a las dos versiones de `jsonproducer` (`jsonproducer-v0` y `jsonproducer-v1`) y al `Deployment` de `jsonreader` (`jsonreader-v0`).
+
+Lo aplicaremos en nuestro cluster con 
+
+[source, bash]
+----
+$ kubectl apply -f $$$$$$$$$$$$$
+----
 
 [source, bash]
 ----
@@ -1263,39 +1275,39 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: jsonreaderpage
+  name: jsonreader
   labels:
-    app: jsonreaderpage
-    service: jsonreaderpage
+    app: jsonreader
+    service: jsonreader
 spec:
   ports:
   - port: 80
     name: http
   selector:
-    app: jsonreaderpage
+    app: jsonreader
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: jsonreaderpage-v0
+  name: jsonreader-v0
   labels:
-    app: jsonreaderpage
+    app: jsonreader
     version: v0
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: jsonreaderpage
+      app: jsonreader
       version: v0
   template:
     metadata:
       labels:
-        app: jsonreaderpage
+        app: jsonreader
         version: v0
     spec:
       containers:
-      - name: jsonreaderpage
-        image: ualmtorres/jsonreader:latest
+      - name: jsonreader
+        image: ualmtorres/jsonreader:v0
         imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 80
@@ -1310,20 +1322,30 @@ spec:
 
 #### Creación de los _subsets_ mediante `DestionationRule`
 
-Las `DestinatioRule` se usan para definir las distintas instancias o versiones disponibles de cada servicio. Cada servicio tendrá su `DestinationRule` con lo siguiente:
+A continación vamos a definir todas las versiones de un servicio. Las `DestinatioRule` se usan para definir las distintas instancias o versiones disponibles de cada servicio. Cada servicio tendrá su `DestinationRule` con lo siguiente:
 
 * `metatada.name`: Nombre.
 * `spec.host`: Host contra el que se lanzará este servicio. Puede ser un nombre DNS (admite _wildcards_) o un nombre de servicio válido en nuestra aplicación.
 * `spec.subsets`: Lista de versiones de servicios a configurar. Cada versión tendrá su nombre (`name`) y usará una etiqueta (p.e. `labels.version: v0`) para emparejarse con los pods de su versión de acuerdo a lo definido en el selector `matchLabels` del objeto `Deployment` del manifiesto del apartado anterior.
+
+
+El manifiesto siguiente corresponde a los dos recursos `DestiantionRule` que vamos a crear, uno para cada servicio, `jsonproducer`  y `jsonreader`, respectivamente. Cada `DestinationRule` incluye los _subsets_ o versiones de recursos `Deployment` de cada servicio. En este caso, indicamos que `jsonreader` consta sólo de un _subset_  al que llegaremos a través de la versión `v0` del servicio (_host_) `jsonreader`. En cambio, `jsonproducer` consta de dos _subset_ , a los que llegaremos a través de las versiones `v0` o `v1` del servicio (_host_) `jsonproducer`. 
+
+Lo aplicaremos en nuestro cluster con 
+
+[source, bash]
+----
+$ kubectl apply -f $$$$$$$$$$$$$
+----
 
 [source, bash]
 ----
 apiVersion: networking.istio.io/v1alpha3
 kind: DestinationRule
 metadata:
-  name: jsonreaderpage
+  name: jsonreader
 spec:
-  host: jsonreaderpage
+  host: jsonreader
   subsets:
   - name: v0
     labels:
@@ -1357,7 +1379,7 @@ Con los servicios virtuales conseguimos crear la capa complementaria a la aplica
 
 [NOTE]
 ====
-Con Istio podremos cambiar el enrutado a unos servicios u otros de forma dinánima. Basta con aplicar otro manifiesto con los nuevos valores de enrutado de los `VirtualService` que seleccionen las versiones correspondientes, el porcentaje de derivación de tráfico entre versiones que coexistan, y demás.
+Con Istio podremos cambiar el enrutado a unos servicios u otros de forma dinánica. Basta con aplicar otro manifiesto con los nuevos valores de enrutado de los `VirtualService` que seleccionen las versiones correspondientes, el porcentaje de derivación de tráfico entre versiones que coexistan, y demás, y el _mesh_ habrá cambiado de acuerdo a las nuevas especificaciones.
 ====
 
 El manifiesto siguiente define un servicio virtual para cada servicio de nuestra aplicación. En este ejemplo cada servicio virtual usa la versión `v0` de los `Deployment` desplegados en el cluster.
@@ -1367,14 +1389,14 @@ El manifiesto siguiente define un servicio virtual para cada servicio de nuestra
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
-  name: jsonreaderpage
+  name: jsonreader
 spec:
   hosts:
-  - jsonreaderpage
+  - jsonreader
   http:
   - route:
     - destination:
-        host: jsonreaderpage
+        host: jsonreader
         subset: v0
 ---
 apiVersion: networking.istio.io/v1alpha3
@@ -1394,6 +1416,13 @@ spec:
 <1> Nombre DNS (admite prefijos _wildcard_) o nombres de servicios del _mesh_
 <2> Servicio al que se quiere dirigir el tráfico
 <3> Versión a la que se quiere dirigir el tráfico
+
+Lo aplicaremos en nuestro cluster con 
+
+[source, bash]
+----
+$ kubectl apply -f $$$$$$$$$$$$$
+----
 
 ### Casos prácticos
 
